// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <a
    href="/companies/rithm"
  >
    <div>
      <h4>
        Rithm School
      </h4>
      <p>
        <small>
          Become an exceptional developer in 16 weeks.
        </small>
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <a
    href="/companies/algo"
  >
    <div>
      <h4>
        Algo School
      </h4>
      <p>
        <small>
          Become a mediocre developer in 160 weeks.
        </small>
      </p>
    </div>
  </a>
</DocumentFragment>
`;
